--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -1,18 +1,30 @@
 <resources>
     <string name="app_name">ND940C3-Project</string>
-    <string name="app_description">Download files from Internet</string>
+    <string name="app">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
-
+    <!-- Notification -->
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
 
+    <!-- LoadingButton -->
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
-    <string name="title_activity_detail">DetailActivity</string>
+    <string name="button_error">Select a option </string>
 
+    <!-- MainActivity -->
     <string name="glide_option">Glide - Image Loading Library by BumpTech</string>
+    <string name="glide_option_description">Download Glide files from Internet</string>
+
     <string name="load_app_option">LoadApp - Current repository by Udacity</string>
+    <string name="load_app_option_description">Download LoadApp files from Internet</string>
+
     <string name="retrofit_option">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
+    <string name="retrofit_option_description">Download Retrofit files from Internet</string>
+
+    <string name="empty_option">Please select the file to download</string>
+
+    <!-- DetailActivity -->
+    <string name="title_activity_detail">DetailActivity</string>
 </resources>
