--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -15,7 +15,8 @@
     <!-- LoadingButton -->
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
-    <string name="button_error">Select a option </string>
+    <string name="button_completed">Download Completed</string>
+    <string name="button_error">Select the file</string>
 
     <!-- MainActivity -->
     <string name="glide_option">Glide - Image Loading Library by BumpTech</string>
